src/objects/PSA_Integration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings used for PSA Integrations (Workday and Intacct)</description>
    <fields>
        <fullName>PSA_Default_Email_Encoding__c</fullName>
        <description>The default value for the Salesforce User Email Encoding field. Will be set to “ISO-8859-1”</description>
        <label>Default Email Encoding</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Default_Language__c</fullName>
        <description>The default value for the Salesforce User Language field. Will be set to “en_US”</description>
        <label>Default Language</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Default_Locale__c</fullName>
        <description>The default value for the Salesforce User Language field. Will be set to “en_US”</description>
        <label>Default Locale</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Default_Role__c</fullName>
        <label>Default Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Default_User_License__c</fullName>
        <description>The default value for the Salesforce User User License field. Will be set to “Platform User”</description>
        <label>Default User License</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Default_User_Profile__c</fullName>
        <description>Name of the salesforce profile for all new PS Resources (users)</description>
        <label>Default User Profile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Guidewire_Account_Id__c</fullName>
        <description>When Contingent Worker Type = “Employee”, set the Account lookup for the PSA Resource to the Guidewire account. All other Contingent Worker Type values will need to have their Account set manually by PSA Ops</description>
        <label>Guidewire Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Username_Suffix__c</fullName>
        <label>Username Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PSA Integration</label>
</CustomObject>